# kolib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml
docs/: README.md  _config.yml
docs/device_access/: README.md  introduction.md  ssh.md  telnet.md
src/: koboconf.cc  koboconf.hh  main.cc  test.cc
src/fs/: paths.hh
src/hw/: battery.hh  board.cc  board.hh  frontlight.cc  frontlight.hh  power.cc  power.hh
src/net/: interfaces.cc  interfaces.hh
src/util/: fio.cc  fio.hh  macros.hh
toolchain/: Dockerfile  cmake  dockcross  env  kobodeploy  make
